# jolt

./: .auto-claude-status  .claude_settings.json  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.gradle.kts  flake.nix  install.sh  jolt.service  settings.gradle.kts
.github/: renovate.json  versions.sh
.github/workflows/: ci.yml  deploy-website.yml  deploy.yml  release.yml
.opencode/commands/: close-plan.md  plan.md  pr-feedback.md  update-plan.md  work-done.md  workon.md
.run/: desktop.run.xml
apps/core/: build.gradle.kts
apps/core/src/commonMain/kotlin/sh/getjolt/: App.kt
apps/core/src/commonMain/kotlin/sh/getjolt/theme/: Color.kt  Theme.kt
apps/desktop/: build.gradle.kts
apps/desktop/src/main/kotlin/: main.kt
assests/: jolt.service
cli/: AGENTS.md  Cargo.toml  README.md
cli/src/: app.rs  config.rs  input.rs  jolt-daemon.rs  jolt.rs  logging.rs  main.rs  settings.rs
cli/src/app/: actions.rs  daemon.rs  mod.rs  process.rs  theme.rs  tui.rs  types.rs
cli/src/cli/: daemon.rs  mod.rs  theme.rs
cli/src/commands/: config.rs  daemon.rs  debug.rs  history.rs  logs.rs  mod.rs  theme.rs
cli/src/daemon/: cli.rs  client.rs  mod.rs  protocol.rs  server.rs  service.rs
cli/src/daemon/service/: linux.rs  macos.rs  mod.rs
cli/src/data/: AGENTS.md  aggregator.rs  battery.rs  display.rs  forecast.rs  history.rs  history_store.rs  mod.rs  power.rs  processes.rs  recorder.rs  session_tracker.rs  system.rs  system_stats.rs
cli/src/theme/: cache.rs  contrast.rs  iterm2.rs  mod.rs  validation.rs
cli/src/theme/themes/: catppuccin.toml  default.toml  gruvbox.toml  nord.toml  one-dark.toml  solarized.toml
cli/src/tui/: config.rs  input.rs  mod.rs  settings.rs
cli/src/tui/app/: actions.rs  daemon.rs  history.rs  mod.rs  theme.rs  tui.rs  types.rs
cli/src/tui/cli/: history.rs  mod.rs
cli/src/tui/commands/: config.rs  debug.rs  history.rs  logs.rs  pipe.rs  theme.rs
cli/src/tui/theme/: mod.rs
cli/src/tui/ui/: battery.rs  battery_details.rs  cycles.rs  graphs.rs  help.rs  history.rs  mod.rs  power.rs  processes.rs  settings.rs  status_bar.rs  system_stats.rs  theme_importer.rs  theme_picker.rs  utils.rs
cli/src/ui/: AGENTS.md  battery.rs  battery_details.rs  config_editor.rs  cycles.rs  daemon_info.rs  graphs.rs  help.rs  history.rs  history_config.rs  mod.rs  power.rs  processes.rs  settings.rs  status_bar.rs  system_stats.rs  theme_importer.rs  theme_picker.rs  utils.rs
crates/platform/: Cargo.toml  README.md
crates/platform/src/: battery.rs  lib.rs  power.rs  types.rs
crates/platform/src/linux/: battery.rs  mod.rs  power.rs
crates/platform/src/macos/: battery.rs  mod.rs  power.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  request.rs  response.rs  types.rs  version.rs
crates/protocol/tests/: fixtures.rs
crates/theme/: Cargo.toml
crates/theme/src/: builtin.rs  cache.rs  contrast.rs  iterm2.rs  lib.rs  loader.rs  types.rs  validation.rs
crates/theme/src/themes/: monokai.toml  tokyo-night.toml
docs/: demo.tape  linux-setup.md
fixtures/requests/: get_charge_sessions.json  get_current_data.json  get_cycle_summary.json  get_daily_cycles.json  get_daily_stats.json  get_hourly_stats.json  get_recent_samples.json  get_status.json  get_top_processes_range.json  kill_process_force.json  kill_process_graceful.json  set_broadcast_interval.json  shutdown.json  subscribe.json  unsubscribe.json
fixtures/responses/: charge_sessions.json  current_data.json  cycle_summary.json  daily_cycles.json  daily_stats.json  data_update.json  error.json  hourly_stats.json  kill_result.json  recent_samples.json  status.json  subscribed.json  subscription_rejected.json  top_processes.json  unsubscribed.json
gradle/: libs.versions.toml
scripts/: check
src/: app.rs  config.rs  input.rs  main.rs
src/daemon/: client.rs  mod.rs  protocol.rs  server.rs
src/data/: aggregator.rs  battery.rs  history.rs  history_store.rs  mod.rs  power.rs  processes.rs  recorder.rs  system.rs
src/theme/: builtin.rs  cache.rs  contrast.rs  iterm2.rs  loader.rs  mod.rs  validation.rs
src/theme/themes/: dracula.toml  rose-pine.toml
src/ui/: battery.rs  config_editor.rs  daemon_info.rs  graphs.rs  help.rs  history.rs  mod.rs  power.rs  processes.rs  status_bar.rs  theme_importer.rs  theme_picker.rs
website/: AGENTS.md  astro.config.mjs  eslint.config.js  package.json
website/src/components/: Footer.astro  Header.astro  InstallTabs.astro
website/src/content/docs/: index.mdx
website/src/content/docs/docs/: cli-reference.md  configuration.md  custom-themes.md  daemon.md  faq.md  getting-started.md  historical-data.md  installation.md  json-output.md  keyboard-shortcuts.md  quick-start.md  themes.md  troubleshooting.md  tui-interface.md  understanding-metrics.md
website/src/layouts/: Landing.astro
website/src/pages/: index.astro  robots.txt.ts
website/src/styles/: custom.css
