[workspace]
resolver = "2"
members = ["cli", "crates/protocol", "crates/theme", "crates/platform"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["jordond"]
license = "MIT"
homepage = "https://getjolt.sh"
repository = "https://github.com/jordond/jolt"
keywords = ["tui", "battery", "energy", "monitoring"]
categories = ["command-line-utilities", "os"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.42", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Error handling
color-eyre = "0.6"
thiserror = "2"

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"

# System
sysinfo = "0.37"
systemstat = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
libc = "0.2"
mach2 = "0.6"

# Config/Storage
toml = "0.9.8"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
plist = "1"

# Network/Other
ureq = "2"
daemonize = "0.5"

# Internal crates (version required for crates.io publishing)
jolt-protocol = { path = "crates/protocol", version = "1.0.0" }
jolt-theme = { path = "crates/theme", version = "1.0.0" }
jolt-platform = { path = "crates/platform", version = "1.0.0" }

# Battery (starship-battery fixes macOS issues: https://github.com/svartalf/rust-battery/issues/102)
starship-battery = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
