[package]
name = "jolt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Jordon"]
description = "A beautiful TUI for monitoring battery and energy usage on macOS"
keywords = ["tui", "battery", "macos", "energy", "monitoring"]
categories = ["command-line-utilities"]

[dependencies]
protocol = { workspace = true }
jolt-theme = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
core-foundation = { workspace = true }
core-foundation-sys = { workspace = true }
libc = { workspace = true }
mach2 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
ureq = { workspace = true }
plist = { workspace = true }
rusqlite = { workspace = true }
daemonize = { workspace = true }
