[package]
name = "jolt-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Jordon de Hoog"]
description = "A beautiful TUI for monitoring battery and energy usage"
keywords = ["tui", "battery", "energy", "monitoring", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "jolt"
path = "src/main.rs"

[features]
default = []

[dependencies]
jolt-protocol = { workspace = true }
jolt-theme = { workspace = true }
jolt-platform = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
systemstat = { workspace = true }
libc = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
ureq = { workspace = true }
plist = { workspace = true }
rusqlite = { workspace = true }
daemonize = { workspace = true }
bytesize = { workspace = true }
humantime = { workspace = true }
