[package]
name = "jolt-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform battery and power monitoring for jolt"

[features]
default = []
macos = [
    "dep:core-foundation",
    "dep:core-foundation-sys",
    "dep:mach2",
]
linux = []

[dependencies]
# Cross-platform
battery = "0.7.8"
color-eyre = { workspace = true }
sysinfo = { workspace = true }

# macOS-specific (optional)
core-foundation = { workspace = true, optional = true }
core-foundation-sys = { workspace = true, optional = true }
mach2 = { workspace = true, optional = true }
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux doesn't need extra deps - uses sysfs directly

[dev-dependencies]
