[package]
name = "jolt-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform battery and power monitoring for jolt"

[features]
default = []
linux = []

[dependencies]
# Cross-platform
starship-battery = { workspace = true }
color-eyre = { workspace = true }
sysinfo = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }
core-foundation-sys = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux doesn't need extra deps - uses sysfs directly

[dev-dependencies]
