[package]
name = "protocol"
description = "Protocol types for jolt daemon IPC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
