[package]
name = "jolt-theme"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Theme system for terminal TUI applications with iTerm2 import support"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1.2"
plist = "1.8"
ureq = "3.2.0"
thiserror = { workspace = true }

[dev-dependencies]
